--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-tabs": "^1.0.4",
+    "framer-motion": "^10.18.0",
     "lucide-react": "^0.311.0",
     "next": "14.0.4",
     "react": "^18",
